--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+
+$cor-principal-verde: #0e6c43; // Verde escuro da palmeira e do nome "Carlos"
+$cor-principal-azul: #66c4c6;   // Azul claro da casa e do nome "Pousada"
+$cor-complementar-verde: #238b69; // Verde claro da palmeira
+$cor-fundo-claro: #f4f0e9;
+$theme-colors: (
+  "primary": $cor-principal-verde,
+  "secondary": $cor-principal-azul,
+);
