galeria de imagens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-hero></app-hero>
 <app-ads></app-ads>
 <app-comodidades></app-comodidades>
+<app-galeria></app-galeria>
 <app-about></app-about>
 <router-outlet />
